--- a/previews-pages.html
+++ b/previews-pages.html
@@ -135,6 +135,12 @@
 						<img src="temp-previews-img/11_spisok-marshrutov.jpg" alt="spisok-marshrutov" />
 					</a>
 				</div>
+				<div class="page-item" data-status="continue">
+					<div class="page-title">Страница 4</div>
+					<a href="routes.html">
+						<img src="temp-previews-img/2_map-main.jpg" alt="Страница с картой" />
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
