--- a/map.html
+++ b/map.html
@@ -36,109 +36,299 @@
 	<!--main map-->
 	<div class="main-map-wrap">
 		<!--map menu-->
-		<div class="map-menu run-ready scrollpanel">
-			<ul class="run-list">
-				<li class="run-item">
-					<div class="run-img">
-						<a href="#"><img src="pic/run/img-run-01.jpg" width="179" height="134" alt="image description" /></a>
-						<span class="run-count">1</span>
-					</div>
-					<div class="run-content">
-						<strong class="run-title">Биг- Бен (Big Ben)</strong>
-						<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
-						<div class="run-progress">
-							<div class="progress-active" style="width: 41.5%;"></div>
-						</div>
-						<ul class="data-list">
-							<li><i class="icon-chat-gray"></i><div class="text-inner">39</div></li>
-							<li><i class="icon-star-gray"></i><div class="text-inner">105</div></li>
-							<li><i class="icon-price-gray"></i><div class="text-inner">14,2 km</div></li>
-							<li><i class="icon-time-gray"></i><div class="text-inner">1:35</div></li>
+		<div class="map-menu run-ready">
+			<!--menu head-->
+			<div class="menu-head js-box-top"></div>
+			<!--menu head end-->
+			<!--menu content-->
+			<div class="menu-content js-box-center">
+				<div class="menu-content-holder scrollpanel">
+					<div class="menu-content-frame">
+						<div class="group-title">День первый</div>
+						<ul class="run-list">
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-01.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">1</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Биг- Бен (Big Ben)</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-02.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">2</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Тауэрский мост (Tower Bridge)</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item marked">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-03.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">3</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Вестминстерское Аббатство</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-04.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">4</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Букингемский дворец</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-05.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">5</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Британский музей</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+						</ul>
+						<div class="group-title">День второй</div>
+						<ul class="run-list">
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-01.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">1</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Биг- Бен (Big Ben)</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-02.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">2</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Тауэрский мост (Tower Bridge)</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item marked">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-03.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">3</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Вестминстерское Аббатство</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-04.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">4</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Букингемский дворец</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
+							<li class="run-item">
+								<div class="run-img">
+									<a href="#"><img src="pic/run/img-run-05.jpg" width="179" height="134" alt="image description" /></a> <span class="run-count">5</span>
+								</div>
+								<div class="run-content">
+									<strong class="run-title">Британский музей</strong>
+									<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
+									<div class="run-progress">
+										<div class="progress-active" style="width: 41.5%;"></div>
+									</div>
+									<ul class="data-list">
+										<li><i class="icon-chat-gray"></i>
+											<div class="text-inner">39</div>
+										</li>
+										<li><i class="icon-star-gray"></i>
+											<div class="text-inner">105</div>
+										</li>
+										<li><i class="icon-price-gray"></i>
+											<div class="text-inner">14,2 km</div>
+										</li>
+										<li><i class="icon-time-gray"></i>
+											<div class="text-inner">1:35</div>
+										</li>
+									</ul>
+								</div>
+								<span class="label-mark"><i class="icon-star-gray"></i></span>
+							</li>
 						</ul>
 					</div>
-					<span class="label-mark"><i class="icon-star-gray"></i></span>
-				</li>
-				<li class="run-item">
-					<div class="run-img">
-						<a href="#"><img src="pic/run/img-run-02.jpg" width="179" height="134" alt="image description" /></a>
-						<span class="run-count">2</span>
-					</div>
-					<div class="run-content">
-						<strong class="run-title">Тауэрский мост (Tower Bridge)</strong>
-						<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
-						<div class="run-progress">
-							<div class="progress-active" style="width: 41.5%;"></div>
-						</div>
-						<ul class="data-list">
-							<li><i class="icon-chat-gray"></i><div class="text-inner">39</div></li>
-							<li><i class="icon-star-gray"></i><div class="text-inner">105</div></li>
-							<li><i class="icon-price-gray"></i><div class="text-inner">14,2 km</div></li>
-							<li><i class="icon-time-gray"></i><div class="text-inner">1:35</div></li>
-						</ul>
-					</div>
-					<span class="label-mark"><i class="icon-star-gray"></i></span>
-				</li>
-				<li class="run-item marked">
-					<div class="run-img">
-						<a href="#"><img src="pic/run/img-run-03.jpg" width="179" height="134" alt="image description" /></a>
-						<span class="run-count">3</span>
-					</div>
-					<div class="run-content">
-						<strong class="run-title">Вестминстерское Аббатство</strong>
-						<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
-						<div class="run-progress">
-							<div class="progress-active" style="width: 41.5%;"></div>
-						</div>
-						<ul class="data-list">
-							<li><i class="icon-chat-gray"></i><div class="text-inner">39</div></li>
-							<li><i class="icon-star-gray"></i><div class="text-inner">105</div></li>
-							<li><i class="icon-price-gray"></i><div class="text-inner">14,2 km</div></li>
-							<li><i class="icon-time-gray"></i><div class="text-inner">1:35</div></li>
-						</ul>
-					</div>
-					<span class="label-mark"><i class="icon-star-gray"></i></span>
-				</li>
-				<li class="run-item">
-					<div class="run-img">
-						<a href="#"><img src="pic/run/img-run-04.jpg" width="179" height="134" alt="image description" /></a>
-						<span class="run-count">4</span>
-					</div>
-					<div class="run-content">
-						<strong class="run-title">Букингемский дворец</strong>
-						<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
-						<div class="run-progress">
-							<div class="progress-active" style="width: 41.5%;"></div>
-						</div>
-						<ul class="data-list">
-							<li><i class="icon-chat-gray"></i><div class="text-inner">39</div></li>
-							<li><i class="icon-star-gray"></i><div class="text-inner">105</div></li>
-							<li><i class="icon-price-gray"></i><div class="text-inner">14,2 km</div></li>
-							<li><i class="icon-time-gray"></i><div class="text-inner">1:35</div></li>
-						</ul>
-					</div>
-					<span class="label-mark"><i class="icon-star-gray"></i></span>
-				</li>
-				<li class="run-item">
-					<div class="run-img">
-						<a href="#"><img src="pic/run/img-run-05.jpg" width="179" height="134" alt="image description" /></a>
-						<span class="run-count">5</span>
-					</div>
-					<div class="run-content">
-						<strong class="run-title">Британский музей</strong>
-						<div class="run-more"><a href="#">Подробнее об этом месте</a></div>
-						<div class="run-progress">
-							<div class="progress-active" style="width: 41.5%;"></div>
-						</div>
-						<ul class="data-list">
-							<li><i class="icon-chat-gray"></i><div class="text-inner">39</div></li>
-							<li><i class="icon-star-gray"></i><div class="text-inner">105</div></li>
-							<li><i class="icon-price-gray"></i><div class="text-inner">14,2 km</div></li>
-							<li><i class="icon-time-gray"></i><div class="text-inner">1:35</div></li>
-						</ul>
-					</div>
-					<span class="label-mark"><i class="icon-star-gray"></i></span>
-				</li>
-			</ul>
+				</div>
+			</div>
+			<!--menu content end-->
+			<!--menu footer-->
+			<div class="menu-footer js-box-bottom">
+				<a href="#" class="btn-menu"><i class="icon-edit-white"></i><span class="text-inner">изменить маршрут</span></a>
+			</div>
+			<!--menu footer end-->
 		</div>
 		<!--map menu end-->
 		<div class="main-map-holder">
