--- a/map.html
+++ b/map.html
@@ -37,6 +37,9 @@
 	<div class="main-map-wrap">
 		<!--map menu-->
 		<div class="map-menu run-ready">
+			<!--switch menu button-->
+			<a href="#" class="switch-menu"><i class="icon-menu-white"></i></a>
+			<!--switch menu button end-->
 			<!--menu head-->
 			<div class="menu-head js-box-top"></div>
 			<!--menu head end-->
@@ -333,6 +336,19 @@
 		<!--map menu end-->
 		<div class="main-map-holder">
 			<div class="main-map" data-latitude="55.75399400" data-longitude="37.62209300" data-zoom="13"></div>
+			<!-- search map form -->
+			<div class="search-map-form">
+				<form action="#" method="get">
+					<div class="input-wrapper">
+						<input type="search" placeholder="" value="">
+						<div class="btn-search">
+							<span class="icon-magnifier-sm-gray"></span>
+							<input type="submit" value="">
+						</div>
+					</div>
+				</form>
+			</div>
+			<!-- search map form end -->
 		</div>
 	</div>
 	<!--main map end-->
