--- a/routes.html
+++ b/routes.html
@@ -110,7 +110,7 @@
 	<!--main end-->
 
 	<!--sidebar-->
-	<aside class="sidebar scrollpanel fixed">
+	<aside class="sidebar fixed">
 		<ul class="sidebar-menu">
 			<li><a href="#"><i class="icon-newsline-white"></i><span class="text-inner">Лента</span></a></li>
 			<li><a href="#"><i class="icon-services-white"></i><span class="text-inner">Сервисы</span></a></li>
