--- a/description.html
+++ b/description.html
@@ -19,7 +19,7 @@
 <!--wrapper-->
 <div class="wrapper">
 	<!--header-->
-	<header class="header">
+	<header class="header fixed">
 		<div class="header-holder">
 			<!--logo-->
 			<strong class="logo"><a href="#">Logo</a></strong><!--logo end-->
@@ -421,6 +421,18 @@
 		</div>
 	</div>
 	<!--main end-->
+
+	<!--sidebar-->
+	<aside class="sidebar fixed">
+		<ul class="sidebar-menu">
+			<li><a href="#"><i class="icon-newsline-white"></i><span class="text-inner">Лента</span></a></li>
+			<li><a href="#"><i class="icon-services-white"></i><span class="text-inner">Сервисы</span></a></li>
+			<li class="active"><a href="javascript:;"><i class="icon-routes-white"></i><span class="text-inner">Маршруты</span></a></li>
+			<li><a href="#"><i class="icon-forum-white"></i><span class="text-inner">Форум</span></a></li>
+			<li><a href="#"><i class="icon-lions-white"></i><span class="text-inner">Места</span></a></li>
+		</ul>
+	</aside>
+	<!--sidebar-->
 </div>
 <!--wrapper end-->
 
