--- a/place.html
+++ b/place.html
@@ -414,7 +414,7 @@
 		<ul class="sidebar-menu">
 			<li><a href="#"><i class="icon-newsline-white"></i><span class="text-inner">Лента</span></a></li>
 			<li><a href="#"><i class="icon-services-white"></i><span class="text-inner">Сервисы</span></a></li>
-			<li class="active"><a href="#"><i class="icon-routes-white"></i><span class="text-inner">Маршруты</span></a></li>
+			<li class="active"><a href="javascript:;"><i class="icon-routes-white"></i><span class="text-inner">Маршруты</span></a></li>
 			<li><a href="#"><i class="icon-forum-white"></i><span class="text-inner">Форум</span></a></li>
 			<li><a href="#"><i class="icon-lions-white"></i><span class="text-inner">Места</span></a></li>
 		</ul>
