--- a/routes.html
+++ b/routes.html
@@ -89,20 +89,270 @@
 				</div>
 				<!--breadcrumbs end-->
 				<h1>Лондон</h1>
-				<ul style="margin-left: -14px; padding: 0; list-style: none;">
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
-					<li style="display: inline-block; vertical-align: top; width: 378px; height: 348px; background: #ccc; margin: 0 0 44px 14px;"></li>
+				<!--routes list-->
+				<ul class="routes-list">
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-01.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Высотный Лондон</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-02.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Шопинг в Лондоне</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-03.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Королевский Лондон</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-04.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Первое знакомство с Лондоном</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-05.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Высотный Лондон</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-06.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Старинные здания в Лондоне</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-07.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Королевский Лондон</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-08.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Загадки Лондона</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-05.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Высотный Лондон</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-06.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Старинные здания в Лондоне</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-horse-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-07.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Королевский Лондон</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="route-item">
+							<div class="route-img">
+								<img src="pic/routes/img-route-08.jpg" alt="image description" />
+								<div class="route-head">
+									<a href="#" class="btn-default">Подборка</a>
+									<strong class="route-title">Загадки Лондона</strong>
+									<span class="route-sub-title">London, UK</span>
+								</div>
+							</div>
+							<div class="route-foot">
+								<div class="route-time">
+									<i class="icon-clock-gray"></i><span class="text-inner">5 h 45 m</span>
+								</div>
+								<ul class="labels-list">
+									<li><i class="icon-car-gray"></i></li>
+									<li><i class="icon-horse-sm-gray"></i></li>
+									<li><i class="icon-walk-sm-gray"></i></li>
+								</ul>
+							</div>
+						</div>
+					</li>
 				</ul>
+				<!--routes list end-->
 			</div>
 			<!--main holder end-->
 		</div>
@@ -114,7 +364,7 @@
 		<ul class="sidebar-menu">
 			<li><a href="#"><i class="icon-newsline-white"></i><span class="text-inner">Лента</span></a></li>
 			<li><a href="#"><i class="icon-services-white"></i><span class="text-inner">Сервисы</span></a></li>
-			<li class="active"><a href="#"><i class="icon-routes-white"></i><span class="text-inner">Маршруты</span></a></li>
+			<li class="active"><a href="javascript:;"><i class="icon-routes-white"></i><span class="text-inner">Маршруты</span></a></li>
 			<li><a href="#"><i class="icon-forum-white"></i><span class="text-inner">Форум</span></a></li>
 			<li><a href="#"><i class="icon-lions-white"></i><span class="text-inner">Места</span></a></li>
 		</ul>
