--- a/elements.html
+++ b/elements.html
@@ -199,7 +199,7 @@
 <!-- wrapper -->
 <div class="wrapper">
 	<!-- header -->
-	<header class="header">
+	<header class="header fixed">
 		<div class="max-wrap">
 			<!-- header holder -->
 			<div class="header-holder">
