--- a/routes.html
+++ b/routes.html
@@ -94,7 +94,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-01.jpg" alt="image description" />
+								<img src="pic/routes/img-route-01.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Высотный Лондон</strong>
@@ -116,7 +116,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-02.jpg" alt="image description" />
+								<img src="pic/routes/img-route-02.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Шопинг в Лондоне</strong>
@@ -138,7 +138,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-03.jpg" alt="image description" />
+								<img src="pic/routes/img-route-03.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Королевский Лондон</strong>
@@ -160,7 +160,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-04.jpg" alt="image description" />
+								<img src="pic/routes/img-route-04.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Первое знакомство с Лондоном</strong>
@@ -181,7 +181,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-05.jpg" alt="image description" />
+								<img src="pic/routes/img-route-05.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Высотный Лондон</strong>
@@ -203,7 +203,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-06.jpg" alt="image description" />
+								<img src="pic/routes/img-route-06.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Старинные здания в Лондоне</strong>
@@ -225,7 +225,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-07.jpg" alt="image description" />
+								<img src="pic/routes/img-route-07.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Королевский Лондон</strong>
@@ -245,7 +245,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-08.jpg" alt="image description" />
+								<img src="pic/routes/img-route-08.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Загадки Лондона</strong>
@@ -268,7 +268,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-05.jpg" alt="image description" />
+								<img src="pic/routes/img-route-05.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Высотный Лондон</strong>
@@ -290,7 +290,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-06.jpg" alt="image description" />
+								<img src="pic/routes/img-route-06.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Старинные здания в Лондоне</strong>
@@ -310,7 +310,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-07.jpg" alt="image description" />
+								<img src="pic/routes/img-route-07.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Королевский Лондон</strong>
@@ -332,7 +332,7 @@
 					<li>
 						<div class="route-item">
 							<div class="route-img">
-								<img src="pic/routes/img-route-08.jpg" alt="image description" />
+								<img src="pic/routes/img-route-08.jpg" width="378" height="303" alt="image description" />
 								<div class="route-head">
 									<a href="#" class="btn-default">Подборка</a>
 									<strong class="route-title">Загадки Лондона</strong>
