--- a/place.html
+++ b/place.html
@@ -144,7 +144,7 @@
 								<i class="icon-schedule-gray"></i>
 								<div class="dl">
 									<strong class="dt">Режим работы</strong>
-									<div class="dd">Часы работы: 10:00 – 18:00
+									<div class="dd">Часы работы: 10:00 – 18:00 <br />
 										Выходные дни: вторник, среда</div>
 								</div>
 							</div>
