--- a/index.html
+++ b/index.html
@@ -1,92 +1,54 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+
 <html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>Главная</title>
-	<!--[if IE]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<!--[if IE]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<!--Mobile optimized-->
-	<meta name="viewport" content="width=1000">
-	<meta name="MobileOptimized" content="1000">
-	<!--Favicon-->
-	<link href="favicon.ico" rel="shortcut icon">
-	<!--Main style-->
-	<link href="css/all.css" rel="stylesheet" media="screen">
-	<!--style for IE-->
-	<!--[if gte IE 9]><link rel="stylesheet" href="css/ie9.css" media="screen, projection"><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" media="screen, projection"><![endif]-->
+	<title>Примеры. Изменение размеры карты.</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<script src="//api-maps.yandex.ru/2.0/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
+	<script src="//yandex.st/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+
+	<script src="js/test.js" type="text/javascript"></script>
 </head>
+
+<style type="text/css">
+	html, body, #map {
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+	}
+
+	.smallMap {
+		width: 300px !important;
+		height: 200px !important;
+		border:1px solid #F00;
+	}
+
+	#toggler {
+		position: absolute;
+		left: 5px;
+		top: 5px;
+		font-size: 12px;
+	}
+
+	#checkbox_block {
+		position: absolute;
+		left: 163px;
+		top: 8px;
+		font-size: 13px;
+		text-shadow: 1px 1px 0 #FFF;
+	}
+</style>
+
 <body>
-<!--wrapper-->
-<div class="wrapper">
-	<!--header-->
-	<header class="header">
-		<div class="max-wrap">
-			<!--header holder-->
-			<div class="header-holder">
-				<!--logo-->
-				<strong class="logo"><a href="#">New Prodject</a></strong>
-				<!--logo end-->
-				<p>HEADER <br /><br /> Lorem ipsum dolor sit amet, <a href="#">link text</a> consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-			</div>
-			<!--header holder end-->
-		</div>
-	</header>
-	<!--header end-->
+<div id="map" style="background-color:#FF0; overflow:hidden" class="smallMap"></div>
+<input type="button" value="Развернуть/Cвернуть" id="toggler"/>
 
-	<!--main-->
-	<div class="main">
-		<div class="max-wrap">
-			<!--main holder-->
-			<div class="main-holder">
-				<!--main content wrapper-->
-				<div class="content-wrap">
-					<!--main content-->
-					<div class="content">
-						ContentTextContent
-					</div>
-					<!--main content end-->
-				</div>
-				<!--main content wrapper end-->
-
-				<!--sidebar-->
-				<aside class="sidebar">
-					SIDEBAR <br /> <br /> Lorem ipsum <a href="#">link text</a> dolor sit amet, consectetur adipisicing elit. Sunt asperiores.
-				</aside>
-				<!--sidebar-->
-
-				<!--aside-->
-				<aside class="aside">
-					ASIDE <br /> <br /> Lorem ipsum <a href="#">link text</a> dolor sit amet, consectetur adipisicing elit. Tempora labore!
-				</aside>
-				<!--aside end-->
-			</div>
-			<!--main holder end-->
-		</div>
-	</div>
-	<!--main end-->
+<div id="checkbox_block">
+	<input type="checkbox" value="Изменить размеры карты" id="checkbox"/>
+	<label for="checkbox">Информировать карту</label>
 </div>
-<!--wrapper end-->
-
-<!--footer-->
-<footer class="footer">
-	<div class="max-wrap">
-		<!--footer holder-->
-		<div class="footer-holder">
-			<p>FOOTER <br /> <br /> Lorem ipsum <a href="#">link text</a> dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-		<!--footer holder end-->
-	</div>
-</footer>
-<!--footer end-->
-
-<!--JQuery library-->
-<script src="js/jquery-1.11.3.min.js"></script>
-<!--JQuery UI-->
-<script src="js/jquery-ui.min.js"></script>
-<!--Widgets-->
-<script src="js/widgets.js"></script>
-<!--Main functions-->
-<script src="js/functions.js"></script>
 </body>
+
 </html>
