--- a/route-ready.html
+++ b/route-ready.html
@@ -1021,6 +1021,14 @@
 				</ul>
 			</div>
 			<!--types of routes end-->
+
+			<!--map balloon-->
+			<div class="map-balloon">
+				<div class="map-balloon-holder">
+					<div>Проложить кратчайший путь к маршруту</div>
+				</div>
+			</div>
+			<!--map balloon end-->
 		</div>
 		<!--main map box-->
 	</div>
