--- a/all-pages.html
+++ b/all-pages.html
@@ -129,16 +129,28 @@
 						<img src="temp-previews-img/10_stranica-mesta.jpg" alt="stranica-mesta" />
 					</a>
 				</div>
-				<div class="page-item" data-status="continue">
+				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 3</div>
 					<a href="routes.html">
 						<img src="temp-previews-img/11_spisok-marshrutov.jpg" alt="spisok-marshrutov" />
 					</a>
 				</div>
-				<div class="page-item" data-status="continue">
-					<div class="page-title">Страница 4</div>
-					<a href="routes.html">
+				<div class="page-item" data-status="done">
+					<div class="page-title">Страница 4 (Создание маршрута)</div>
+					<a href="route-create.html">
+						<img src="temp-previews-img/8.jpg" alt="Страница с картой" />
+					</a>
+				</div>
+				<div class="page-item" data-status="done">
+					<div class="page-title">Страница 5 (Готовый маршрут)</div>
+					<a href="route-ready.html">
 						<img src="temp-previews-img/2_map-main.jpg" alt="Страница с картой" />
+					</a>
+				</div>
+				<div class="page-item" data-status="done">
+					<div class="page-title">Страница 6 (Редактирование маршрута)</div>
+					<a href="route-edit.html">
+						<img src="temp-previews-img/6_route-edit.jpg" alt="Страница с картой" />
 					</a>
 				</div>
 			</div>
