--- a/all-pages.html
+++ b/all-pages.html
@@ -150,7 +150,13 @@
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 6 (Редактирование маршрута)</div>
 					<a href="route-edit.html">
-						<img src="temp-previews-img/6_route-edit.jpg" alt="Страница с картой" />
+						<img src="temp-previews-img/6_route-edit.jpg" width="1920" height="1202" alt="Страница с картой" />
+					</a>
+				</div>
+				<div class="page-item" data-status="continue">
+					<div class="page-title">Страница 7 (Личный кабинет)</div>
+					<a href="office.html">
+						<img src="temp-previews-img/1_office.jpg" width="1329" height="1772" alt="Страница с картой" />
 					</a>
 				</div>
 			</div>
