--- a/elements.html
+++ b/elements.html
@@ -324,6 +324,27 @@
 					<li><i class="icon-routes-white"></i></li>
 					<li><i class="icon-forum-white"></i></li>
 					<li><i class="icon-lions-white"></i></li>
+					<li><i class="icon-personal-date"></i></li>
+					<li><i class="icon-personal-date-white"></i></li>
+					<li><i class="icon-personal-setting"></i></li>
+					<li><i class="icon-personal-setting-white"></i></li>
+					<li><i class="icon-personal-out"></i></li>
+					<li><i class="icon-personal-in-white"></i></li>
+					<li><i class="icon-personal-in"></i></li>
+					<li><i class="icon-personal-in-white"></i></li>
+					<li><i class="icon-star-lg-half"></i></li>
+					<li><i class="icon-earth-sm-white"></i></li>
+					<li><i class="icon-road-sm-white"></i></li>
+					<li><i class="icon-user-sm-white"></i></li>
+					<li><i class="icon-map-sm-white"></i></li>
+					<li><i class="icon-blog-sm-white"></i></li>
+					<li><i class="icon-profile-sm-white"></i></li>
+					<li><i class="icon-skype-sm"></i></li>
+					<li><i class="icon-phone-sm"></i></li>
+					<li><i class="icon-review-dark"></i></li>
+					<li><i class="icon-skype-lg"></i></li>
+					<li><i class="icon-email-lg"></i></li>
+					<li><i class="icon-magnifier-pink"></i></li>
 					<li><i class=""></i></li>
 				</ul>
 
