--- a/place.html
+++ b/place.html
@@ -459,19 +459,19 @@
 		<div id="comment-popup" class="comment-form">
 			<form action="#" method="get">
 				<div class="form-line">
-					<div class="input-holder field-email">
+					<div class="input-holder">
 						<i class="icon-email"></i>
-						<input type="text" placeholder="E-mail" />
+						<input type="email" placeholder="E-mail" />
 					</div>
 				</div>
 				<div class="form-line">
-					<div class="input-holder field-password">
+					<div class="input-holder">
 						<i class="icon-password"></i>
-						<input type="text" placeholder="Пароль" />
+						<input type="password" placeholder="Пароль" />
 					</div>
 				</div>
 				<div class="form-line">
-					<div class="input-holder field-message">
+					<div class="input-holder">
 						<i class="icon-message"></i>
 						<textarea placeholder="Ваше сообщение"></textarea>
 					</div>
