--- a/all-pages.html
+++ b/all-pages.html
@@ -159,6 +159,12 @@
 						<img src="temp-previews-img/1_office.jpg" width="1329" height="1772" alt="Страница с картой" />
 					</a>
 				</div>
+				<div class="page-item" data-status="continue">
+					<div class="page-title">Страница c попапами</div>
+					<a href="office.html">
+						<img src="temp-previews-img/popups.jpg" width="1124" height="769" alt="Страница с картой" />
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
